# XWindowSystemOpenGLTemplate

./: .gitignore  CMakeLists.txt  log.txt
backup/: main.cpp
shaders/triangle/: fragmentShader.glsl  vertexShader.glsl
src/: Logger.cpp  Logger.h  Shader.cpp  Shader.h  WindowManager.cpp  WindowManager.h  main.cpp
